Add `-Djava.security.manager=allow` in case of java 21